@@ -477,6 +477,7 @@ Mac:
 
 - Implement wxWindow::ShowWithEffect() in wxOSX/Cocoa.
 - Correct min/max pages display in the print dialog (Auria).
+- Fix wxDataViewColumn::GetWidth() in Cocoa (Neno Ganchev).
 
 MSW:
 
